kubernetes/apps/media/seerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: media
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - seerr.local.elmurphy.com
  rules:
    - backendRefs:
        - name: seerr
          port: 5055
